--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load core_filters %}
 
 {% block style %}
 html,
@@ -32,18 +33,19 @@ height: 100vh;
 {% block content %}
 
 <!--Carousel Wrapper-->
-<div id="carousel-example-1z" class="carousel slide carousel-fade pt-4" data-ride="carousel">
+{% comment %} <div id="carousel-example-1z" class="carousel slide carousel-fade pt-4" data-ride="carousel">
+  {% endcomment %}
 
   <!--Indicators-->
-  <ol class="carousel-indicators">
+  {% comment %} <ol class="carousel-indicators">
     <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-1z" data-slide-to="1"></li>
     <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-  </ol>
+  </ol> {% endcomment %}
   <!--/.Indicators-->
 
   <!--Slides-->
-  <div class="carousel-inner" role="listbox">
+  {% comment %} <div class="carousel-inner" role="listbox">
 
     <!--First slide-->
     <div class="carousel-item active">
@@ -162,21 +164,21 @@ height: 100vh;
     </div>
     <!--/Third slide-->
 
-  </div>
+  </div> {% endcomment %}
   <!--/.Slides-->
 
   <!--Controls-->
-  <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+  {% comment %} <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </a>
+  </a> {% endcomment %}
   <!--/.Controls-->
 
-</div>
+  {% comment %} </div> {% endcomment %}
 <!--/.Carousel Wrapper-->
 
 <!--Main layout-->
@@ -292,43 +294,61 @@ height: 100vh;
     <!--Section: Products v.3-->
 
     <!--Pagination-->
+    {% if is_paginated %}
     <nav class="d-flex justify-content-center wow fadeIn">
       <ul class="pagination pg-blue">
 
+        {% if page_obj.has_previous %}
         <!--Arrow left-->
-        <li class="page-item disabled">
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+          </a>
+        </li>
+        {% else %}
+        <li class="page-item invisible">
           <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
             <span class="sr-only">Previous</span>
           </a>
         </li>
+        {% endif %}
 
+        {% for page_number in page_obj.paginator.num_pages|page_range %}
+        {% if page_obj.number == page_number  %}
         <li class="page-item active">
-          <a class="page-link" href="#">1
+          <a class="page-link" href="?page={{ page_number}}">{{ page_number }}
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        {% else %}
         <li class="page-item">
-          <a class="page-link" href="#">2</a>
+          <a class="page-link" href="?page={{ page_number }}">{{ page_number }}
+            <span class="sr-only">(current)</span>
+          </a>
         </li>
-        <li class="page-item">
-          <a class="page-link" href="#">3</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">4</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="#">5</a>
-        </li>
+        {% endif %}
+        {% endfor %}
 
+        {% if page_obj.has_next %}
         <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+          </a>
+        </li>
+        {% else %}
+        <li class="page-item invisible">
           <a class="page-link" href="#" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
             <span class="sr-only">Next</span>
           </a>
         </li>
+        {% endif %}
       </ul>
     </nav>
+    {% endif %}
     <!--Pagination-->
 
   </div>
