--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,5 @@
+{% load cart_template_tags %}
+
 <!-- Navbar -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
     <div class="container">
@@ -26,20 +28,38 @@
                 <li class="nav-item">
                     <a class="nav-link waves-effect" href="/checkout">Checkout</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-effect" href="/products">Products</a>
-                </li>
             </ul>
 
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons">
+                {% if request.user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link waves-effect">
-                        <span class="badge red z-depth-1 mr-1"> 1 </span>
+                        {% if request.user|cart_item_count > 0 %}
+                        <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
+                        {% endif %}
                         <i class="fas fa-shopping-cart"></i>
                         <span class="clearfix d-none d-sm-inline-block"> Cart </span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'account_logout' %}" class="nav-link waves-effect">
+                        <span class="clearfix d-none d-sm-inline-block"> Logout </span>
+                    </a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a href="{% url 'account_login' %}" class="nav-link waves-effect">
+                        <span class="clearfix d-none d-sm-inline-block"> Login </span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'account_signup' %}" class="nav-link waves-effect">
+                        <span class="clearfix d-none d-sm-inline-block"> Signup </span>
+                    </a>
+                </li>
+                {% endif %}
+                
                 {% comment %} <li class="nav-item">
                     <a href="https://www.facebook.com/mdbootstrap" class="nav-link waves-effect" target="_blank">
                         <i class="fab fa-facebook-f"></i>
