--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
   </style>
 
   <title> {% block title %} {% endblock title %}</title>
+  {% block extra_head %}
+    {% endblock %}
 </head>
 
 {% include 'navbar.html' %}
