--- a/templates/product.html
+++ b/templates/product.html
@@ -52,13 +52,14 @@
             </button>
 
           </form> {% endcomment %}
-
+          <div class="d-flex justify-content-left">
           <a href="{{object.get_add_to_cart_url}}" class="btn btn-primary btn-md my-0 p" type="submit">Add to cart
             <i class="fas fa-shopping-cart ml-1"></i>
           </a>
-          <a href="{{object.get_remove_from_cart_url}}" class="btn btn-primary btn-md my-0 p" type="submit">Add to cart
+          <a href="{{object.get_remove_from_cart_url}}" class="btn btn-danger btn-md my-0 p" type="submit">Remove from cart
             <i class="fas fa-shopping-cart ml-1"></i>
           </a>
+          </div>
         </div>
         <!--Content-->
 
