--- a/templates/footer.html
+++ b/templates/footer.html
@@ -31,7 +31,7 @@
             <i class="fab fa-youtube mr-3"></i>
         </a>
 
-        <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
+        {% comment %} <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
             <i class="fab fa-google-plus-g mr-3"></i>
         </a>
 
@@ -49,7 +49,7 @@
 
         <a href="http://codepen.io/mdbootstrap/" target="_blank">
             <i class="fab fa-codepen mr-3"></i>
-        </a>
+        </a> {% endcomment %}
     </div>
     <!-- Social icons -->
 
