--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,14 @@
 
   {% block extra_scripts %}
   {% endblock extra_scripts %}
+
+  {% if messages %}
+  <script type="text/javascript"> 
+    window.setTimeout(()=>{
+      $('.alert').alert('close');
+    }, 3000);
+  </script>
+  {% endif %}
 </body>
 
 </html>
