--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -56,13 +56,16 @@
             <td></td>
             <td nowrap>৳ {{order_item.item.price|floatformat}}</td>
             <td nowrap>
-              {% comment %} <input type="number" value="{{order_item.quantity}}" aria-label="Search" class="form-control"
-                style="width: 100px"> {% endcomment %}
-                <div class="d-flex justify-content-center align-items-center">
-                <a style="border-radius:50%" class="mr-2 btn-sm btn-default" href="{% url 'core:reduce-item-quantity-in-cart' order_item.item.slug%}"><i class="fas fa-minus"></i></a>
+              {% comment %} <input type="number" value="{{order_item.quantity}}" aria-label="Search"
+                class="form-control" style="width: 100px"> {% endcomment %}
+              <div class="d-flex justify-content-center align-items-center">
+                <a style="border-radius:50%" class="mr-2 btn-sm btn-default"
+                  href="{% url 'core:reduce-item-quantity-in-cart' order_item.item.slug%}"><i
+                    class="fas fa-minus"></i></a>
                 {{order_item.quantity}}
-                <a style="border-radius:50%" class="ml-2 btn-default btn-sm" href="{% url 'core:add-item-quantity-in-cart' order_item.item.slug%}"><i class="fas fa-plus"></i></a>
-                </div>
+                <a style="border-radius:50%" class="ml-2 btn-default btn-sm"
+                  href="{% url 'core:add-item-quantity-in-cart' order_item.item.slug%}"><i class="fas fa-plus"></i></a>
+              </div>
             </td>
             <td class="font-weight-bold">
               {% if order_item.item.discount_price %}
@@ -73,7 +76,8 @@
               {% endif %}
             </td>
             <td>
-              <a href="{% url 'core:remove-item-in-cart' order_item.item.slug%}" class="btn btn-sm btn-danger btn-rounded-custom" title="Remove item">X
+              <a href="{% url 'core:remove-item-in-cart' order_item.item.slug%}"
+                class="btn btn-sm btn-danger btn-rounded-custom" title="Remove item">X
               </a>
             </td>
           </tr>
@@ -83,30 +87,29 @@
           <tr>
             <td colspan="4"></td>
             <td colspan="1">
-              <h4 class="float-right mt-3"><strong> Total:</strong></h4>
+              <h4 class="float-right mt-1 mb-1"><strong> Total:</strong></h4>
             </td>
             <td colspan="2" nowrap>
-              <h4 class="mt-3"><strong>৳ {{order.get_total|floatformat}}</strong></h4>
+              <h4 class="mt-1 mb-1"><strong>৳ {{order.get_total|floatformat}}</strong></h4>
             </td>
 
           </tr>
           {% endif %}
-
-
-          
-
-
-
+          <tr>
+            <td colspan="7">
+              <div class="w-100 mt-1 mb-1 d-flex justify-content-center">
+                <a href="/" class="mr-3 btn btn-secondary">Continue shopping</a>
+                <a href="{% url 'core:checkout'%}" class="ml-2 btn btn-primary">Proceed to checkout</a>
+              </div>
+            </td>
+          </tr>
         </tbody>
         <!-- /.Table body -->
 
       </table>
 
-           <div class="w-100 mt-3 mb-3 d-flex justify-content-center">
-                <a href="/" class="mr-2 btn btn-secondary">Continue shopping</a>
-                <a href="" class="ml-2 btn btn-primary">Proceed to checkout</a>
-              </div>   
-    <!-- /.Shopping Cart table -->
+
+      <!-- /.Shopping Cart table -->
 
   </section>
   <!--Section: Content-->
