--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,8 @@
   <!-- Your custom styles (optional) -->
   <link href="{% static 'css/style.min.css' %}" rel="stylesheet">
 
-  <style type="text/css">
-    {
-      % block style %
-    }
-
-      {
-      % endblock %
-    }
+  {% block style %}
+  {% endblock %}
   </style>
 
   <title> {% block title %} {% endblock title %}</title>
