--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,8 +1,5 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% comment %}
-
-<body class="grey lighten-3"> {% endcomment %}
 
   {% block content %}
   <!--Main layout-->
@@ -155,48 +152,40 @@
           <!-- Heading -->
           <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-muted">Your cart</span>
-            <span class="badge badge-secondary badge-pill">3</span>
+            <span class="badge badge-secondary badge-pill">{{ order.get_total_quantity }}</span>
           </h4>
 
           <!-- Cart -->
           <ul class="list-group mb-3 z-depth-1">
+          {% for order_item in order.items.all %}
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0">Product name</h6>
-                <small class="text-muted">Brief description</small>
+                <h6 class="my-0">{{ order_item.item.title }}</h6>
+                {% if order_item.item.discount_price %}
+                <small class="text-muted">৳ {{ order_item.item.discount_price }} × {{ order_item.quantity }}</small>
+                {% else %}
+                <small class="text-muted">৳ {{ order_item.item.price }}×{{ order_item.quantity }}</small>
+                {% endif %}
               </div>
-              <span class="text-muted">$12</span>
+              <span class="text-muted">৳ {{ order_item.get_final_price }}</span>
             </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Second product</h6>
-                <small class="text-muted">Brief description</small>
-              </div>
-              <span class="text-muted">$8</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">Third item</h6>
-                <small class="text-muted">Brief description</small>
-              </div>
-              <span class="text-muted">$5</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between bg-light">
+            {% endfor %}
+            {% comment %} <li class="list-group-item d-flex justify-content-between bg-light">
               <div class="text-success">
                 <h6 class="my-0">Promo code</h6>
                 <small>EXAMPLECODE</small>
               </div>
               <span class="text-success">-$5</span>
-            </li>
+            </li> {% endcomment %}
             <li class="list-group-item d-flex justify-content-between">
-              <span>Total (USD)</span>
-              <strong>$20</strong>
+              <span><strong>Total (BDT)<strong></span>
+              <strong>৳ {{ order.get_total }}</strong>
             </li>
           </ul>
           <!-- Cart -->
 
           <!-- Promo code -->
-          <form class="card p-2">
+          {% comment %} <form class="card p-2">
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Promo code" aria-label="Recipient's username"
                 aria-describedby="basic-addon2">
@@ -204,7 +193,7 @@
                 <button class="btn btn-secondary btn-md waves-effect m-0" type="button">Redeem</button>
               </div>
             </div>
-          </form>
+          </form> {% endcomment %}
           <!-- Promo code -->
 
         </div>
