--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
 {% load core_filters %}
 
 {% block style %}
+<style>
 html,
 body,
 header,
@@ -28,6 +29,7 @@ header,
 height: 100vh;
 }
 }
+</style>
 {% endblock style %}
 
 {% block content %}
