--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -149,52 +149,7 @@
         <!--Grid column-->
         <div class="col-md-4 mb-4">
 
-          <!-- Heading -->
-          <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-muted">Your cart</span>
-            <span class="badge badge-secondary badge-pill">{{ order.get_total_quantity }}</span>
-          </h4>
-
-          <!-- Cart -->
-          <ul class="list-group mb-3 z-depth-1">
-          {% for order_item in order.items.all %}
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
-                <h6 class="my-0">{{ order_item.item.title }}</h6>
-                {% if order_item.item.discount_price %}
-                <small class="text-muted">৳ {{ order_item.item.discount_price }} × {{ order_item.quantity }}</small>
-                {% else %}
-                <small class="text-muted">৳ {{ order_item.item.price }}×{{ order_item.quantity }}</small>
-                {% endif %}
-              </div>
-              <span class="text-muted">৳ {{ order_item.get_final_price }}</span>
-            </li>
-            {% endfor %}
-            {% comment %} <li class="list-group-item d-flex justify-content-between bg-light">
-              <div class="text-success">
-                <h6 class="my-0">Promo code</h6>
-                <small>EXAMPLECODE</small>
-              </div>
-              <span class="text-success">-$5</span>
-            </li> {% endcomment %}
-            <li class="list-group-item d-flex justify-content-between">
-              <span><strong>Total (BDT)<strong></span>
-              <strong>৳ {{ order.get_total }}</strong>
-            </li>
-          </ul>
-          <!-- Cart -->
-
-          <!-- Promo code -->
-          {% comment %} <form class="card p-2">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Promo code" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-secondary btn-md waves-effect m-0" type="button">Redeem</button>
-              </div>
-            </div>
-          </form> {% endcomment %}
-          <!-- Promo code -->
+         {% include 'snippets/order_summary_snippet.html' %} 
 
         </div>
         <!--Grid column-->
