--- a/templates/home.html
+++ b/templates/home.html
@@ -248,8 +248,9 @@ height: 100vh;
 
             <!--Card image-->
             <div class="view overlay">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"
-                alt="">
+              <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"
+                alt=""> -->
+                <img src="{{ item.image.url }}" alt="Image: {{ item.title }}" class="card-img-top">
               <a href="{{item.get_absolute_url}}">
                 <div class="mask rgba-white-slight"></div>
               </a>
