--- a/templates/product.html
+++ b/templates/product.html
@@ -12,7 +12,8 @@
       <!--Grid column-->
       <div class="col-md-6 mb-4">
 
-        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+        <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt=""> -->
+        <img src="{{ object.image.url }}" alt="Image: {{ object.title }}" class="img-fluid">
 
       </div>
       <!--Grid column-->
@@ -25,7 +26,7 @@
 
           <div class="mb-3">
             <a href="">
-              <span class="badge purple mr-1">{{ object.get_category_display }}</span>
+              <span class="badge purple mr-1 px-3">{{ object.get_category_display }}</span>
             </a>
           </div>
 
@@ -40,7 +41,7 @@
             {% endif %}
           </p>
 
-          <p class="lead font-weight-bold">Description</p>
+          <h3 class="font-weight-bold">{{ object.title }}</h3>
 
           <p>{{object.description}}</p>
 
