--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,79 +1,39 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-  {% block content %}
-  <!--Main layout-->
-  <main>
-    <div class="container wow fadeIn">
+{% block content %}
+<!--Main layout-->
+<main>
+  <div class="container wow fadeIn">
 
-      <!-- Heading -->
-      <h2 class="my-5 h2 text-center">Checkout form</h2>
+    <!-- Heading -->
+    <h2 class="my-5 h2 text-center">Checkout form</h2>
 
-      <!--Grid row-->
-      <div class="row">
+    <!--Grid row-->
+    <div class="row">
 
-        <!--Grid column-->
-        <div class="col-md-8 mb-4">
+      <!--Grid column-->
+      <div class="col-md-8 mb-4">
 
-          <!--Card-->
-          <div class="card">
-            <!--Card content-->
-            <form method="POST" class="card-body">
-              {% csrf_token %}
-              {% comment %}<!--Grid row-->
-              <div class="row">
-
-                 <!--Grid column-->
-                <div class="col-md-6 mb-2">
-
-                  <!--firstName-->
-                  <div class="md-form ">
-                    <input type="text" id="firstName" class="form-control">
-                    <label for="firstName" class="">First name</label>
-                  </div>
-
-                </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
-                <div class="col-md-6 mb-2">
-
-                  <!--lastName-->
-                  <div class="md-form">
-                    <input type="text" id="lastName" class="form-control">
-                    <label for="lastName" class="">Last name</label>
-                  </div>
-
-                </div>
-                <!--Grid column-->
-
-              </div>
-              <!--Grid row-->
-
-              <!--Username-->
-              <div class="md-form input-group pl-0 mb-5">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1">@</span>
-                </div>
-                <input type="text" class="form-control py-0" placeholder="Username" aria-describedby="basic-addon1">
-              </div>
-
-              <!--email-->
-              <div class="md-form mb-5">
-                <input type="text" id="email" class="form-control" placeholder="youremail@example.com">
-                <label for="email" class="">Email (optional)</label>
-              </div> {% endcomment %}
+        <!--Card-->
+        <div class="card">
+          <!--Card content-->
+          <form method="POST" class="card-body">
+            {% csrf_token %}
+            <h3>Shipping address</h3>
+            <div id='hideable-shipping-form'>
 
               <!--address-->
               <div class="md-form mb-5">
-                {{ form.street_address }}
+                <input type='text' placeholder='1234 Main St' id='shipping_address' name='shipping_address'
+                  class='form-control'>
                 <label for="street_address" class="">Address</label>
               </div>
 
               <!--address-2-->
               <div class="md-form mb-5">
-                {{ form.apartment_address }}
-                <label for="apartment_address" class="">Address 2 (optional)</label>
+                <input type='text' placeholder='Apartment or suite' id='shipping_address2' name='shipping_address2'
+                  class='form-control'><label for="apartment_address" class="">Address 2 (optional)</label>
               </div>
 
               <!--Grid row-->
@@ -87,7 +47,7 @@
                     <option value="">Choose...</option>
                     <option>United States</option>
                   </select> {% endcomment %}
-                  {{ form.country }}
+                  {{ form.shipping_country }}
                   <div class="invalid-feedback">
                     Please select a valid country.
                   </div>
@@ -97,16 +57,16 @@
 
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-6 mb-4">
-                  <label for="city">City</label>
-                  {{ form.city }}
-                </div>
+                  <label for="shipping_city">City</label>
+                  <input type='text' placeholder='City or State' id='shipping_city' name='shipping_city'
+                    class='form-control'></div>
                 <!--Grid column-->
 
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-6 mb-4">
-                  <label for="post_code">Post code</label>
-                  {{ form.post_code }}
-                </div>
+                  <label for="shipping_post">Post code</label>
+                  <input type='text' placeholder='Post or zip code' id='shipping_post' name='shipping_post'
+                    class='form-control'></div>
                 <!--Grid column-->
 
               </div>
@@ -115,50 +75,172 @@
               <hr>
 
               <div class="custom-control custom-checkbox">
-                <input {% if form.same_shipping_address.value %} checked {% endif %} name="same_shipping_address" type="checkbox" class="custom-control-input" id="same_shipping_address">
-                <label class="custom-control-label" for="same_shipping_address">Shipping address is the same as my billing
-                  address</label>
+                <input name="set_default_shipping" type="checkbox" class="custom-control-input"
+                  id="set_default_shipping">
+                <label class="custom-control-label" for="set_default_shipping">Set as default shipping address</label>
               </div>
-              <div class="custom-control custom-checkbox">
-                <input {% if form.save_info.value %} checked {% endif %} name="save_info" type="checkbox" class="custom-control-input" id="save_info">
-                <label class="custom-control-label" for="save_info">Save this information for next time</label>
+
+            </div>
+
+            {% if default_shipping_address %}
+            <div class="custom-control custom-checkbox">
+              <input name="use_default_shipping" type="checkbox" class="custom-control-input" id="use_default_shipping">
+              <label class="custom-control-label" for="use_default_shipping">Use default shipping address:
+                {{ default_shipping_address.street_address|truncatechars:10 }} </label>
+            </div>
+            <hr>
+            <div class="custom-control custom-checkbox">
+              <input name="same_billing_address" type="checkbox" class="custom-control-input" id="same_billing_address">
+              <label class="custom-control-label" for="same_billing_address">Billing address is the same as my
+                shipping address</label>
+            </div>
+            {% endif %}
+            <hr>
+
+            <h3>Billing address</h3>
+            <div id='hideable-billing-form'>
+
+              <!--address-->
+              <div class="md-form mb-5">
+                <input type='text' placeholder='1234 Main St' id='billing_address' name='billing_address'
+                  class='form-control'>
+                <label for="billing_address" class="">Address</label>
               </div>
+
+              <!--address-2-->
+              <div class="md-form mb-5">
+                <input type='text' placeholder='Apartment or suite' id='billing_address2' name='billing_address2'
+                  class='form-control'><label for="billing_address2" class="">Address 2 (optional)</label>
+              </div>
+
+              <!--Grid row-->
+              <div class="row">
+
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-12 mb-4">
+
+                  <label for="billing_country">Country</label>
+                  {{ form.billing_country }}
+                  <div class="invalid-feedback">
+                    Please select a valid country.
+                  </div>
+
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <label for="billing_city">City</label>
+                  <input type='text' placeholder='City or State' id='billing_city' name='billing_city'
+                    class='form-control'></div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <label for="billing_post">Post code</label>
+                  <input type='text' placeholder='Post or zip code' id='billing_post' name='billing_post'
+                    class='form-control'></div>
+                <!--Grid column-->
+
+              </div>
+              <!--Grid row-->
 
               <hr>
 
-              {% for value, name in form.fields.payment_option.choices %}
-              <div class="d-block my-3">
-                <div class="custom-control custom-radio">
-                  <input id="{{ name }}" value={{ value }} name="payment_option" type="radio" class="custom-control-input" checked required>
-                  <label class="custom-control-label" for="{{ name }}">{{ name }}</label>
-                </div>
+              <div class="custom-control custom-checkbox">
+                <input name="set_default_billing" type="checkbox" class="custom-control-input" id="set_default_billing">
+                <label class="custom-control-label" for="set_default_billing">Set as default billing address</label>
               </div>
-              {% endfor %}
-              
-              <hr class="mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
 
-            </form>
+            </div>
 
-          </div>
-          <!--/.Card-->
+            {% if default_billing_address %}
+            <div class="custom-control custom-checkbox">
+              <input name="use_default_billing" type="checkbox" class="custom-control-input" id="use_default_billing">
+              <label class="custom-control-label" for="use_default_billing">Use default billing address:
+                {{ default_billing_address.street_address|truncatechars:10 }}</label>
+            </div>
+            {% endif %}
+            <hr>
+
+            <h3>Payment option</h3>
+            {% for value, name in form.fields.payment_option.choices %}
+            <div class="d-block my-3">
+              <div class="custom-control custom-radio">
+                <input id="{{ name }}" value={{ value }} name="payment_option" type="radio" class="custom-control-input"
+                  checked required>
+                <label class="custom-control-label" for="{{ name }}">{{ name }}</label>
+              </div>
+            </div>
+            {% endfor %}
+
+            <hr class="mb-4">
+            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+
+
+          </form>
 
         </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-md-4 mb-4">
-
-         {% include 'snippets/order_summary_snippet.html' %} 
-
-        </div>
-        <!--Grid column-->
+        <!--/.Card-->
 
       </div>
-      <!--Grid row-->
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-md-4 mb-4">
+
+        {% include 'snippets/order_summary_snippet.html' %}
+
+      </div>
+      <!--Grid column-->
 
     </div>
-  </main>
-  <!--Main layout-->
+    <!--Grid row-->
 
-  {% endblock content %}
+  </div>
+</main>
+<!--Main layout-->
+
+{% endblock content %}
+
+{% block extra_scripts %}
+<script type='text/javascript'>
+  var hideable_shipping_form = $('#hideable-shipping-form');
+  var hideable_billing_form = $('#hideable-billing-form');
+
+  var use_default_shipping = document.querySelector('input[name=use_default_shipping]');
+  var same_billing_address = document.querySelector('input[name=same_billing_address');
+  var use_default_billing = document.querySelector('input[name=use_default_billing]');
+
+  use_default_shipping.addEventListener('change', function () {
+    // console.log(`this of use_default_shipping: ${this}`);
+    if (this.checked) {
+      // JQuery hide method
+      hideable_shipping_form.hide();
+    } else {
+      // JQuery show method
+      hideable_shipping_form.show();
+    }
+  });
+
+  same_billing_address.addEventListener('change', function () {
+    if (this.checked) {
+      use_default_billing.checked = false;
+      //JQuery hide method
+      hideable_billing_form.hide();
+    } else {
+      hideable_billing_form.show();
+    }
+  })
+  use_default_billing.addEventListener('change', function () {
+    // console.log(`this of use_default_billing: ${this}`);
+    if (this.checked) {
+      same_billing_address.checked = false;
+      // JQuery hide method
+      hideable_billing_form.hide();
+    } else {
+      hideable_billing_form.show();
+    }
+  });
+</script>
+{% endblock %}
