--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
 
         <!-- Brand -->
         <a class="navbar-brand waves-effect" href="/">
-            <strong class="blue-text">Django Store</strong>
+            <strong class="black-text">Django Store</strong>
         </a>
 
         <!-- Collapse -->
