--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -16,13 +16,15 @@
 </script>
 
 <script type="text/javascript">
-    $(function(){
+    $(function () {
         $(document).mousedown(event => {
             let clickover = $(event.target);
             let _opened = $(".navbar-toggler").attr("aria-expanded");
-            console.log(`_opened:${_opened == "true"}`);
-            console.log(clickover);
-            if(_opened === "true" && !clickover.is("#navbar-top, #navbar-top div, #navbar-top ul, #navbar-top li, #navbar-top span, #navbar-top a, #navbar-top i")) {
+            // console.log(`_opened:${_opened == "true"}`);
+            // console.log(clickover);
+            if (_opened === "true" && !clickover.is(
+                    "#navbar-top, #navbar-top div, #navbar-top ul, #navbar-top li, #navbar-top span, #navbar-top a, #navbar-top i"
+                )) {
                 $("#navbar-top button.navbar-toggler").click();
                 // $(".navbar.fixed-top button.navbar-toggler").attr("aria-expanded", "false");
             }
