--- a/templates/payment.html
+++ b/templates/payment.html
@@ -3,102 +3,102 @@
 
 {% block style %}
 <style>
-*,
-label {
-font-family: "Helvetica Neue", Helvetica, sans-serif;
-font-size: 16px;
-font-variant: normal;
-padding: 0;
-margin: 0;
--webkit-font-smoothing: antialiased;
-}
+  *,
+  label {
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 16px;
+    font-variant: normal;
+    padding: 0;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+  }
 
-#stripe-btn {
-border: none;
-border-radius: 4px;
-outline: none;
-text-decoration: none;
-color: #fff;
-background: #32325d;
-white-space: nowrap;
-display: inline-block;
-height: 40px;
-line-height: 40px;
-padding: 0 14px;
-box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
-border-radius: 4px;
-font-size: 15px;
-font-weight: 600;
-letter-spacing: 0.025em;
-text-decoration: none;
--webkit-transition: all 150ms ease;
-transition: all 150ms ease;
-float: left;
-margin-left: 12px;
-margin-top: 28px;
-}
+  #stripe-btn {
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    text-decoration: none;
+    color: #fff;
+    background: #32325d;
+    white-space: nowrap;
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 14px;
+    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
+    border-radius: 4px;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 0.025em;
+    text-decoration: none;
+    -webkit-transition: all 150ms ease;
+    transition: all 150ms ease;
+    float: left;
+    margin-left: 12px;
+    margin-top: 28px;
+  }
 
-#stripe-btn:hover {
-transform: translateY(-1px);
-box-shadow: 0 7px 14px rgba(50, 50, 93, .10), 0 3px 6px rgba(0, 0, 0, .08);
-background-color: #43458b;
-}
+  #stripe-btn:hover {
+    transform: translateY(-1px);
+    box-shadow: 0 7px 14px rgba(50, 50, 93, .10), 0 3px 6px rgba(0, 0, 0, .08);
+    background-color: #43458b;
+  }
 
-#stripe-form {
-padding: 30px;
-height: 120px;
-}
+  #stripe-form {
+    padding: 30px;
+    height: 120px;
+  }
 
-#stripe-btn-label {
-font-weight: 500;
-font-size: 14px;
-display: block;
-margin-bottom: 8px;
-}
+  #stripe-btn-label {
+    font-weight: 500;
+    font-size: 14px;
+    display: block;
+    margin-bottom: 8px;
+  }
 
-#card-errors {
-height: 20px;
-padding: 4px 0;
-color: #fa755a;
-}
+  #card-errors {
+    height: 20px;
+    padding: 4px 0;
+    color: #fa755a;
+  }
 
-.stripe-form-row {
-width: 70%;
-float: left;
-}
+  .stripe-form-row {
+    width: 70%;
+    float: left;
+  }
 
 
-/**
+  /**
 * The CSS shown here will not be introduced in the Quickstart guide, but shows
 * how you can use CSS to style your Element's container.
 */
-.StripeElement {
-box-sizing: border-box;
+  .StripeElement {
+    box-sizing: border-box;
 
-height: 40px;
+    height: 40px;
 
-padding: 10px 12px;
+    padding: 10px 12px;
 
-border: 1px solid transparent;
-border-radius: 4px;
-background-color: white;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: white;
 
-box-shadow: 0 1px 3px 0 #e6ebf1;
--webkit-transition: box-shadow 150ms ease;
-transition: box-shadow 150ms ease;
-}
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+  }
 
-.StripeElement--focus {
-box-shadow: 0 1px 3px 0 #cfd7df;
-}
+  .StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+  }
 
-.StripeElement--invalid {
-border-color: #fa755a;
-}
+  .StripeElement--invalid {
+    border-color: #fa755a;
+  }
 
-.StripeElement--webkit-autofill {
-background-color: #fefde5 !important;
-}
+  .StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
+  }
 </style>
 {% endblock %}
 
@@ -124,30 +124,44 @@ background-color: #fefde5 !important;
             <script src="https://js.stripe.com/v3/"></script>
 
             <form method="post" id="stripe-form">
-            {% csrf_token %}
-              <div class="stripe-form-row">
-                <label for="card-element" id="stripe-btn-label">
-                  Credit or debit card
-                </label>
-                <div id="card-element" class="StripeElement StripeElement--empty">
-                  <div class="__PrivateStripeElement"
-                    style="margin: 0px !important; padding: 0px !important; border: none !important; display: block !important; background: transparent !important; position: relative !important; opacity: 1 !important;">
-                    <iframe frameborder="0" allowtransparency="true" scrolling="no" name="__privateStripeFrame5"
-                      allowpaymentrequest="true"
-                      src="https://js.stripe.com/v3/elements-inner-card-cd25803263cd2601cb18e3cd5aa05896.html#style[base][color]=%2332325d&amp;style[base][fontFamily]=%22Helvetica+Neue%22%2C+Helvetica%2C+sans-serif&amp;style[base][fontSmoothing]=antialiased&amp;style[base][fontSize]=16px&amp;style[base][::placeholder][color]=%23aab7c4&amp;style[invalid][color]=%23fa755a&amp;style[invalid][iconColor]=%23fa755a&amp;componentName=card&amp;wait=false&amp;rtl=false&amp;keyMode=test&amp;apiKey=pk_test_TYooMQauvdEDq54NiTphI7jx&amp;origin=https%3A%2F%2Fstripe.com&amp;referrer=https%3A%2F%2Fstripe.com%2Fdocs%2Fstripe-js&amp;controllerId=__privateStripeController1"
-                      title="Secure payment input frame"
-                      style="border: none !important; margin: 0px !important; padding: 0px !important; width: 1px !important; min-width: 100% !important; overflow: hidden !important; display: block !important; user-select: none !important; height: 19.2px;"></iframe><input
-                      class="__PrivateStripeElement-input" aria-hidden="true" aria-label=" " autocomplete="false"
-                      maxlength="1"
-                      style="border: none !important; display: block !important; position: absolute !important; height: 1px !important; top: 0px !important; left: 0px !important; padding: 0px !important; margin: 0px !important; width: 100% !important; opacity: 0 !important; background: transparent !important; pointer-events: none !important; font-size: 16px !important;">
-                  </div>
-                </div>
-
-                <!-- Used to display form errors. -->
-                <div id="card-errors" role="alert"></div>
+              {% csrf_token %}
+              {% if card %}
+              <div class="mb-4 custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="use_default" name="use_default">
+                <label class="custom-control-label" for="use_default">Use default card for purchase</label>
               </div>
+              {% endif %}
 
+              <div id="hideable-stripe-form">
+                <div class="stripe-form-row">
+                  <label for="card-element" id="stripe-btn-label">
+                    Credit or debit card
+                  </label>
+                  <div id="card-element" class="StripeElement StripeElement--empty">
+                    <div class="__PrivateStripeElement"
+                      style="margin: 0px !important; padding: 0px !important; border: none !important; display: block !important; background: transparent !important; position: relative !important; opacity: 1 !important;">
+                      <iframe frameborder="0" allowtransparency="true" scrolling="no" name="__privateStripeFrame5"
+                        allowpaymentrequest="true"
+                        src="https://js.stripe.com/v3/elements-inner-card-cd25803263cd2601cb18e3cd5aa05896.html#style[base][color]=%2332325d&amp;style[base][fontFamily]=%22Helvetica+Neue%22%2C+Helvetica%2C+sans-serif&amp;style[base][fontSmoothing]=antialiased&amp;style[base][fontSize]=16px&amp;style[base][::placeholder][color]=%23aab7c4&amp;style[invalid][color]=%23fa755a&amp;style[invalid][iconColor]=%23fa755a&amp;componentName=card&amp;wait=false&amp;rtl=false&amp;keyMode=test&amp;apiKey=pk_test_TYooMQauvdEDq54NiTphI7jx&amp;origin=https%3A%2F%2Fstripe.com&amp;referrer=https%3A%2F%2Fstripe.com%2Fdocs%2Fstripe-js&amp;controllerId=__privateStripeController1"
+                        title="Secure payment input frame"
+                        style="border: none !important; margin: 0px !important; padding: 0px !important; width: 1px !important; min-width: 100% !important; overflow: hidden !important; display: block !important; user-select: none !important; height: 19.2px;"></iframe><input
+                        class="__PrivateStripeElement-input" aria-hidden="true" aria-label=" " autocomplete="false"
+                        maxlength="1"
+                        style="border: none !important; display: block !important; position: absolute !important; height: 1px !important; top: 0px !important; left: 0px !important; padding: 0px !important; margin: 0px !important; width: 100% !important; opacity: 0 !important; background: transparent !important; pointer-events: none !important; font-size: 16px !important;">
+                    </div>
+                  </div>
+
+                  <div class="mt-3 mb-2 custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="save" name="save">
+                    <label class="custom-control-label" for="save">Save card for future purchases</label>
+                  </div>
+                  <!-- Used to display form errors. -->
+                  <div id="card-errors" role="alert"></div>
+                </div>
+              </div>
               <button id="stripe-btn">Submit Payment</button>
+
+
             </form>
           </div>
           <!--/.Card content-->
@@ -159,11 +173,11 @@ background-color: #fefde5 !important;
       <!--Grid column-->
 
       <!--Grid column-->
-        <div class="col-md-12 mb-4">
+      <div class="col-md-12 mb-4">
 
-         {% include 'snippets/order_summary_snippet.html' %} 
+        {% include 'snippets/order_summary_snippet.html' %}
 
-        </div>
+      </div>
       <!--/.Grid column-->
 
     </div>
@@ -177,6 +191,19 @@ background-color: #fefde5 !important;
 
 {% block extra_scripts %}
 <script type="text/javascript" nonce="">
+  // Create event listener to hide form on using saved card
+  var hideable_stripe_form = $('#hideable-stripe-form');
+  var use_default = document.querySelector('input[name=use_default]');
+  var save = document.querySelector('input[name=save]');
+  use_default.addEventListener('change', function () {
+    if (this.checked) {
+      save.checked = false;
+      hideable_stripe_form.hide();
+    } else {
+      hideable_stripe_form.show();
+    }
+  });
+
   // Create a Stripe client.
   var stripe = Stripe('pk_test_TYooMQauvdEDq54NiTphI7jx');
 
@@ -249,7 +276,6 @@ background-color: #fefde5 !important;
     // Submit the form
     form.submit();
   }
-
 </script>
 
 {% endblock extra_scripts %}
