--- a/templates/product.html
+++ b/templates/product.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load core_filters %}
 
 {% block content %}
 
@@ -93,15 +94,19 @@
     <!--Grid row-->
     <div class="row wow fadeIn">
 
+      {% for image in object.get_secondary_images %}
       <!--Grid column-->
-      <div class="col-lg-4 col-md-12 mb-4">
+      <div class="col-lg-{{object.get_secondary_images|divide_by_col}} col-md-12 mb-4">
 
-        <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt="">
+        {% comment %} <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/11.jpg" class="img-fluid" alt=""> {% endcomment %}
+        <img class="img-fluid" alt="" src="{{ image.url }}"/>
+
 
       </div>
       <!--Grid column-->
+      {% endfor %}
 
-      <!--Grid column-->
+      {% comment %} <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
 
         <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/12.jpg" class="img-fluid" alt="">
@@ -115,7 +120,7 @@
         <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" class="img-fluid" alt="">
 
       </div>
-      <!--Grid column-->
+      <!--Grid column--> {% endcomment %}
 
     </div>
     <!--Grid row-->
