--- a/templates/product.html
+++ b/templates/product.html
@@ -34,9 +34,9 @@
           <p class="lead">
             {% if object.discount_price %}
             <span class="mr-1">
-              <del>$200</del>
+              <del>৳ {{object.price}}</del>
             </span>
-            <span>৳ {{object.price}}</span>
+            <span>৳ {{object.discount_price}}</span>
             {% else %}
             <span>৳ {{object.price}}</span>
             {% endif %}
